--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "@ava/babel-preset-stage-4",
-  "version": "2.0.0",
+  "name": "@gerhobbelt/babel-preset-stage-4",
+  "version": "2.0.0-1",
   "description": "Efficiently applies the minimum of transforms to run stage 4 code on Node.js 6, 8 and 10",
   "license": "MIT",
   "repository": "avajs/babel-preset-stage-4",
   "author": "Mark Wubben (https://novemberborn.net)",
   "engines": {
-    "node": ">=6.12.3 <7 || >=8.9.4 <9 || >=10.0.0"
+    "node": ">=6.12.3"
   },
   "scripts": {
-    "test": "xo && nyc ava"
+    "test": "xo && nyc ava",
+    "pub": "npm publish --access public"
   },
   "files": [
     "index.js",
@@ -20,20 +21,20 @@
     "babel-preset"
   ],
   "dependencies": {
-    "@babel/plugin-proposal-async-generator-functions": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-proposal-optional-catch-binding": "^7.0.0",
-    "@babel/plugin-transform-async-to-generator": "^7.0.0",
-    "@babel/plugin-transform-dotall-regex": "^7.0.0",
-    "@babel/plugin-transform-exponentiation-operator": "^7.0.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.0.0"
+    "@gerhobbelt/babel-plugin-proposal-async-generator-functions": "^7.0.0-beta.530006",
+    "@gerhobbelt/babel-plugin-proposal-object-rest-spread": "^7.0.0-beta.530006",
+    "@gerhobbelt/babel-plugin-proposal-optional-catch-binding": "^7.0.0-beta.530006",
+    "@gerhobbelt/babel-plugin-transform-async-to-generator": "^7.0.0-beta.530006",
+    "@gerhobbelt/babel-plugin-transform-dotall-regex": "^7.0.0-beta.530006",
+    "@gerhobbelt/babel-plugin-transform-exponentiation-operator": "^7.0.0-beta.530006",
+    "@gerhobbelt/babel-plugin-transform-modules-commonjs": "^7.0.0-beta.530006"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@gerhobbelt/babel-core": "^7.0.0-beta.530006",
     "ava": "^0.25.0",
     "codecov": "^3.0.4",
-    "nyc": "^12.0.2",
-    "proxyquire": "^2.0.1",
+    "nyc": "^13.0.1",
+    "proxyquire": "^2.1.0",
     "xo": "^0.22.0"
   },
   "nyc": {
